syntax = "proto3";
package common.v0;
option go_package = "kwil/api/protobuf/kwil/common/v0/gen/go";

import "kwil/common/v0/types.proto";

message Executable {
    string name = 1;
    string statement = 2;

    repeated UserInput user_inputs = 3;
    repeated Arg args = 4;
}

message UserInput {
    string name = 1;
    string value = 2;
}

message Arg {
    uint32 position = 1;
    bool static = 2;
    string name = 3;
    string value = 4;
    DataType type = 5;
    ModifierType modifier = 6;
}